--- a/calculator.html
+++ b/calculator.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <title>Load Calculator</title>
   <link rel="stylesheet" href="calculator.css">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.3.0/jasmine.css">
+
 </head>
 
 <body>
@@ -32,7 +34,12 @@
           <span id="monthly-payment"></span>
     </div>
   </section>
+
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.3.0/jasmine.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.3.0/jasmine-html.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.3.0/boot.js"></script>
   <script type="text/javascript" src="calculator.js"></script>
+  <script type="text/javascript" src="calculator-test.js"></script>
 </body>
 
 </html>
